2006-04-14  David Reveman  <davidr@novell.com>

	* plugins/scale.c (scaleInitiate): Layout thumbnails before we
	grab the screen to make sure some window exist.

	* plugins/resize.c: Allow 4-way resize. (Mike Hearn)

2006-04-13  Dan Winship  <danw@novell.com>

	* src/screen.c (panelAction): take a timestamp and pass that to
	the panel rather than using CurrentTime

	* src/event.c (handleEvent): update for that

	* src/window.c (moveResizeWindow): fix the gravity handling so
	self-resizing windows don't dance (although I'm pretty sure this
	is a symptom of mishandling gravity somewhere else).

	* plugins/gconf.c (gconfInitOption): Request the default value of
	the key from gconf, rather than initializing the key to the
	internal default value if it hasn't yet been set by the user.
	Notably, this makes it so that "compiz gconf" on a new account
	will use the default value of active_plugins rather than the
	(effectively empty) list of plugins on the command line. (It also
	makes it so that the sysadmin can override defaults via sabayon or
	whatever.)

2006-04-13  David Reveman  <davidr@novell.com>

	* src/window.c (mapWindow): Maybe not, disable it again. :(

	* src/window.c (mapWindow): Enable draw synchronization on map
	again. Should be working correctly with CVS version of X server.

2006-04-12  Dan Winship  <danw@novell.com>

	* src/window.c (moveResizeWindow): move duplicated code from
	_NET_MOVERESIZE_WINDOW and ConfigureRequest handlers in event.c to
	here, and handle gravity as well. (Fixes bnc 163058.)
	(updateWindowAttributes): Do nothing if the window is
	override_redirect (and remove a few now-redundant checks of that
	elsewhere). Previously we were forgetting to check
	!override_redirect in the case where the motif hints changed. (bnc
	163931)
	(getWindowUserTime): fix a cut-and-paste-o that caused a crash on
	64bit machines.

	* src/event.c (handleEvent): fix the _NET_MOVERESIZE_WINDOW bit